@@ -1,3 +1,8 @@
+2008-08-28  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/37253
+	* gfortran.dg/proc_ptr_10.f90: New.
+
 2008-08-28  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/36741
